parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    RETURN

Grammar

Rule 0     S' -> start
Rule 1     start -> Linst
Rule 2     Linst -> Linst statement SEMI
Rule 3     Linst -> statement SEMI
Rule 4     bloc -> bloc statement SEMI
Rule 5     bloc -> statement SEMI
Rule 6     statement -> FUNCTION NAME LPAREN RPAREN LACC bloc RACC
Rule 7     statement -> FUNCTION NAME LPAREN params RPAREN LACC bloc RACC
Rule 8     params -> params COMMA NAME
Rule 9     params -> NAME
Rule 10    statement -> IF LPAREN expression RPAREN LACC bloc RACC
Rule 11    statement -> IF LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC
Rule 12    statement -> WHILE LPAREN expression RPAREN LACC bloc RACC
Rule 13    statement -> FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
Rule 14    statement -> PRINT LPAREN expression RPAREN
Rule 15    statement -> expression
Rule 16    statement -> NAME EGAL expression
Rule 17    expression -> NAME LPAREN args RPAREN
Rule 18    args -> args COMMA expression
Rule 19    args -> expression
Rule 20    args -> <empty>
Rule 21    expression -> expression INF expression
Rule 22    expression -> expression INFEG expression
Rule 23    expression -> expression SUP expression
Rule 24    expression -> expression EGALEGAL expression
Rule 25    expression -> expression AND expression
Rule 26    expression -> expression OR expression
Rule 27    expression -> expression PLUS expression
Rule 28    expression -> expression PLUSPLUS
Rule 29    expression -> expression TIMES expression
Rule 30    expression -> expression MINUS expression
Rule 31    expression -> expression DIVIDE expression
Rule 32    expression -> LPAREN expression RPAREN
Rule 33    expression -> NUMBER
Rule 34    expression -> NAME

Terminals, with rules where they appear

AND                  : 25
COMMA                : 8 18
DIVIDE               : 31
EGAL                 : 16
EGALEGAL             : 24
ELSE                 : 11
FOR                  : 13
FUNCTION             : 6 7
IF                   : 10 11
INF                  : 21
INFEG                : 22
LACC                 : 6 7 10 11 11 12 13
LPAREN               : 6 7 10 11 12 13 14 17 32
MINUS                : 30
NAME                 : 6 7 8 9 16 17 34
NUMBER               : 33
OR                   : 26
PLUS                 : 27
PLUSPLUS             : 28
PRINT                : 14
RACC                 : 6 7 10 11 11 12 13
RETURN               : 
RPAREN               : 6 7 10 11 12 13 14 17 32
SEMI                 : 2 3 4 5 13 13
SUP                  : 23
TIMES                : 29
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

Linst                : 1 2
args                 : 17 18
bloc                 : 4 6 7 10 11 11 12 13
expression           : 10 11 12 13 14 15 16 18 19 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 29 29 30 30 31 31 32
params               : 7 8
start                : 0
statement            : 2 3 4 5 13 13

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . Linst
    (2) Linst -> . Linst statement SEMI
    (3) Linst -> . statement SEMI
    (6) statement -> . FUNCTION NAME LPAREN RPAREN LACC bloc RACC
    (7) statement -> . FUNCTION NAME LPAREN params RPAREN LACC bloc RACC
    (10) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (11) statement -> . IF LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC
    (12) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (13) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (14) statement -> . PRINT LPAREN expression RPAREN
    (15) statement -> . expression
    (16) statement -> . NAME EGAL expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    FUNCTION        shift and go to state 4
    IF              shift and go to state 7
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    PRINT           shift and go to state 11
    NAME            shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    start                          shift and go to state 1
    Linst                          shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 8

state 1

    (0) S' -> start .



state 2

    (1) start -> Linst .
    (2) Linst -> Linst . statement SEMI
    (6) statement -> . FUNCTION NAME LPAREN RPAREN LACC bloc RACC
    (7) statement -> . FUNCTION NAME LPAREN params RPAREN LACC bloc RACC
    (10) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (11) statement -> . IF LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC
    (12) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (13) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (14) statement -> . PRINT LPAREN expression RPAREN
    (15) statement -> . expression
    (16) statement -> . NAME EGAL expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    $end            reduce using rule 1 (start -> Linst .)
    FUNCTION        shift and go to state 4
    IF              shift and go to state 7
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    PRINT           shift and go to state 11
    NAME            shift and go to state 5
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    statement                      shift and go to state 13
    expression                     shift and go to state 8

state 3

    (3) Linst -> statement . SEMI

    SEMI            shift and go to state 14


state 4

    (6) statement -> FUNCTION . NAME LPAREN RPAREN LACC bloc RACC
    (7) statement -> FUNCTION . NAME LPAREN params RPAREN LACC bloc RACC

    NAME            shift and go to state 15


state 5

    (16) statement -> NAME . EGAL expression
    (17) expression -> NAME . LPAREN args RPAREN
    (34) expression -> NAME .

    EGAL            shift and go to state 16
    LPAREN          shift and go to state 17
    INF             reduce using rule 34 (expression -> NAME .)
    INFEG           reduce using rule 34 (expression -> NAME .)
    SUP             reduce using rule 34 (expression -> NAME .)
    EGALEGAL        reduce using rule 34 (expression -> NAME .)
    AND             reduce using rule 34 (expression -> NAME .)
    OR              reduce using rule 34 (expression -> NAME .)
    PLUS            reduce using rule 34 (expression -> NAME .)
    PLUSPLUS        reduce using rule 34 (expression -> NAME .)
    TIMES           reduce using rule 34 (expression -> NAME .)
    MINUS           reduce using rule 34 (expression -> NAME .)
    DIVIDE          reduce using rule 34 (expression -> NAME .)
    SEMI            reduce using rule 34 (expression -> NAME .)
    RPAREN          reduce using rule 34 (expression -> NAME .)


state 6

    (32) expression -> LPAREN . expression RPAREN
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 18

state 7

    (10) statement -> IF . LPAREN expression RPAREN LACC bloc RACC
    (11) statement -> IF . LPAREN expression RPAREN LACC bloc RACC ELSE LACC bloc RACC

    LPAREN          shift and go to state 20


state 8

    (15) statement -> expression .
    (21) expression -> expression . INF expression
    (22) expression -> expression . INFEG expression
    (23) expression -> expression . SUP expression
    (24) expression -> expression . EGALEGAL expression
    (25) expression -> expression . AND expression
    (26) expression -> expression . OR expression
    (27) expression -> expression . PLUS expression
    (28) expression -> expression . PLUSPLUS
    (29) expression -> expression . TIMES expression
    (30) expression -> expression . MINUS expression
    (31) expression -> expression . DIVIDE expression

    SEMI            reduce using rule 15 (statement -> expression .)
    RPAREN          reduce using rule 15 (statement -> expression .)
    INF             shift and go to state 21
    INFEG           shift and go to state 22
    SUP             shift and go to state 23
    EGALEGAL        shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    PLUS            shift and go to state 27
    PLUSPLUS        shift and go to state 28
    TIMES           shift and go to state 29
    MINUS           shift and go to state 30
    DIVIDE          shift and go to state 31


state 9

    (12) statement -> WHILE . LPAREN expression RPAREN LACC bloc RACC

    LPAREN          shift and go to state 32


state 10

    (13) statement -> FOR . LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC

    LPAREN          shift and go to state 33


state 11

    (14) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 34


state 12

    (33) expression -> NUMBER .

    INF             reduce using rule 33 (expression -> NUMBER .)
    INFEG           reduce using rule 33 (expression -> NUMBER .)
    SUP             reduce using rule 33 (expression -> NUMBER .)
    EGALEGAL        reduce using rule 33 (expression -> NUMBER .)
    AND             reduce using rule 33 (expression -> NUMBER .)
    OR              reduce using rule 33 (expression -> NUMBER .)
    PLUS            reduce using rule 33 (expression -> NUMBER .)
    PLUSPLUS        reduce using rule 33 (expression -> NUMBER .)
    TIMES           reduce using rule 33 (expression -> NUMBER .)
    MINUS           reduce using rule 33 (expression -> NUMBER .)
    DIVIDE          reduce using rule 33 (expression -> NUMBER .)
    SEMI            reduce using rule 33 (expression -> NUMBER .)
    RPAREN          reduce using rule 33 (expression -> NUMBER .)
    COMMA           reduce using rule 33 (expression -> NUMBER .)


state 13

    (2) Linst -> Linst statement . SEMI

    SEMI            shift and go to state 35


state 14

    (3) Linst -> statement SEMI .

    FUNCTION        reduce using rule 3 (Linst -> statement SEMI .)
    IF              reduce using rule 3 (Linst -> statement SEMI .)
    WHILE           reduce using rule 3 (Linst -> statement SEMI .)
    FOR             reduce using rule 3 (Linst -> statement SEMI .)
    PRINT           reduce using rule 3 (Linst -> statement SEMI .)
    NAME            reduce using rule 3 (Linst -> statement SEMI .)
    LPAREN          reduce using rule 3 (Linst -> statement SEMI .)
    NUMBER          reduce using rule 3 (Linst -> statement SEMI .)
    $end            reduce using rule 3 (Linst -> statement SEMI .)


state 15

    (6) statement -> FUNCTION NAME . LPAREN RPAREN LACC bloc RACC
    (7) statement -> FUNCTION NAME . LPAREN params RPAREN LACC bloc RACC

    LPAREN          shift and go to state 36


state 16

    (16) statement -> NAME EGAL . expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 37

state 17

    (17) expression -> NAME LPAREN . args RPAREN
    (18) args -> . args COMMA expression
    (19) args -> . expression
    (20) args -> .
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    RPAREN          reduce using rule 20 (args -> .)
    COMMA           reduce using rule 20 (args -> .)
    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    args                           shift and go to state 38
    expression                     shift and go to state 39

state 18

    (32) expression -> LPAREN expression . RPAREN
    (21) expression -> expression . INF expression
    (22) expression -> expression . INFEG expression
    (23) expression -> expression . SUP expression
    (24) expression -> expression . EGALEGAL expression
    (25) expression -> expression . AND expression
    (26) expression -> expression . OR expression
    (27) expression -> expression . PLUS expression
    (28) expression -> expression . PLUSPLUS
    (29) expression -> expression . TIMES expression
    (30) expression -> expression . MINUS expression
    (31) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 40
    INF             shift and go to state 21
    INFEG           shift and go to state 22
    SUP             shift and go to state 23
    EGALEGAL        shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    PLUS            shift and go to state 27
    PLUSPLUS        shift and go to state 28
    TIMES           shift and go to state 29
    MINUS           shift and go to state 30
    DIVIDE          shift and go to state 31


state 19

    (17) expression -> NAME . LPAREN args RPAREN
    (34) expression -> NAME .

    LPAREN          shift and go to state 17
    RPAREN          reduce using rule 34 (expression -> NAME .)
    INF             reduce using rule 34 (expression -> NAME .)
    INFEG           reduce using rule 34 (expression -> NAME .)
    SUP             reduce using rule 34 (expression -> NAME .)
    EGALEGAL        reduce using rule 34 (expression -> NAME .)
    AND             reduce using rule 34 (expression -> NAME .)
    OR              reduce using rule 34 (expression -> NAME .)
    PLUS            reduce using rule 34 (expression -> NAME .)
    PLUSPLUS        reduce using rule 34 (expression -> NAME .)
    TIMES           reduce using rule 34 (expression -> NAME .)
    MINUS           reduce using rule 34 (expression -> NAME .)
    DIVIDE          reduce using rule 34 (expression -> NAME .)
    SEMI            reduce using rule 34 (expression -> NAME .)
    COMMA           reduce using rule 34 (expression -> NAME .)


state 20

    (10) statement -> IF LPAREN . expression RPAREN LACC bloc RACC
    (11) statement -> IF LPAREN . expression RPAREN LACC bloc RACC ELSE LACC bloc RACC
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 41

state 21

    (21) expression -> expression INF . expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 42

state 22

    (22) expression -> expression INFEG . expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 43

state 23

    (23) expression -> expression SUP . expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 44

state 24

    (24) expression -> expression EGALEGAL . expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 45

state 25

    (25) expression -> expression AND . expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 46

state 26

    (26) expression -> expression OR . expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 47

state 27

    (27) expression -> expression PLUS . expression
    (17) expression -> . NAME LPAREN args RPAREN
    (21) expression -> . expression INF expression
    (22) expression -> . expression INFEG expression
    (23) expression -> . expression SUP expression
    (24) expression -> . expression EGALEGAL expression
    (25) expression -> . expression AND expression
    (26) expression -> . expression OR expression
    (27) expression -> . expression PLUS expression
    (28) expression -> . expression PLUSPLUS
    (29) expression -> . expression TIMES expression
    (30) expression -> . expression MINUS expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . LPAREN expression RPAREN
    (33) expression -> . NUMBER
    (34) expression -> . NAME

    NAME            shift and go to state 19
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 12

    expression                     shift and go to state 48

state 28

    (28) expression -> expression PLUSPLUS .
